--- a/app/globals.css
+++ b/app/globals.css
@@ -4,6 +4,11 @@
 @tailwind components;
 @tailwind utilities;
 
+@layer base {
+  html {
+    scroll-behavior: smooth;
+  }
+}
 
 body {
   font-family: 'Vazirmatn', sans-serif;
